matchRegistration does not need to go to StorageProcess if no service worker is registered https://bugs.webkit.org/show_bug.cgi?id=179480

Patch by Youenn Fablet <youenn@apple.com> on 2017-11-13
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/activation.https-expected.txt:
* web-platform-tests/service-workers/service-worker/activation.https.html:
* web-platform-tests/service-workers/service-worker/registration-iframe.https.html:

Source/WebCore:

Covered by existing tests.

Moving the origin store in SWServer since they share the same session ID.
This allows updating the origin store based on each registration map update.
This also allows clearing the origin store when clearing the SWServer.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* workers/service/server/SWOriginStore.cpp: Added.
(WebCore::SWOriginStore::add):
(WebCore::SWOriginStore::remove):
(WebCore::SWOriginStore::clear):
(WebCore::SWOriginStore::clearAll):
* workers/service/server/SWOriginStore.h: Added.
* workers/service/server/SWServer.cpp:
(WebCore::SWServer::addRegistration):
(WebCore::SWServer::removeRegistration):
(WebCore::SWServer::OriginStore::add):
(WebCore::SWServer::OriginStore::remove):
(WebCore::SWServer::OriginStore::clear):
(WebCore::SWServer::OriginStore::clearAll):
(WebCore::SWServer::clearAll):
(WebCore::SWServer::clear):
(WebCore::SWServer::SWServer):
* workers/service/server/SWServer.h:
(WebCore::SWServer::originStore):

Source/WebKit:

Removed origin store handling from StorageProcess since it is now handled within SWServer.
Updated clearing of web site data accordingly.
Optimized matchRegistration by looking at the origin store before doing any IPC.
Do IPC to the StorageProcess if the origin store is not yet initialized on the WebProcess.

* StorageProcess/ServiceWorker/WebSWOriginStore.h:
* StorageProcess/ServiceWorker/WebSWServerConnection.cpp:
(WebKit::WebSWServerConnection::resolveRegistrationJobInClient):
(WebKit::WebSWServerConnection::resolveUnregistrationJobInClient):
* StorageProcess/StorageProcess.cpp:
(WebKit::StorageProcess::deleteWebsiteData):
(WebKit::StorageProcess::deleteWebsiteDataForOrigins):
(WebKit::StorageProcess::swServerForSession):
(WebKit::StorageProcess::swOriginStoreForSession):
(WebKit::StorageProcess::registerSWServerConnection):
(WebKit::StorageProcess::unregisterSWServerConnection):
(WebKit::StorageProcess::ensureSWOriginStoreForSession): Deleted.
(WebKit::StorageProcess::swOriginStoreForSession const): Deleted.
* StorageProcess/StorageProcess.h:
* StorageProcess/ServiceWorker/WebSWOriginStore.cpp:
(WebKit::WebSWOriginStore::addToStore):
(WebKit::WebSWOriginStore::removeFromStore):
(WebKit::WebSWOriginStore::clearStore):
(WebKit::WebSWOriginStore::add): Deleted.
(WebKit::WebSWOriginStore::remove): Deleted.
(WebKit::WebSWOriginStore::clear): Deleted.
* StorageProcess/ServiceWorker/WebSWOriginStore.h:
* WebProcess/Storage/WebSWClientConnection.cpp:
(WebKit::WebSWClientConnection::matchRegistration):

Canonical link: https://commits.webkit.org/195677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224792 268f45cc-cd09-0410-ab3c-d52691b4dbfc